[package]
name = 'pallet-moderation'
version = '0.6.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Subsocial pallet for content moderation'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'df-traits/std',
    'pallet-permissions/std',
    'pallet-posts/std',
    'pallet-spaces/std',
    'pallet-space-follows/std',
    'pallet-utils/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '2.0.1'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '2.0.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '2.0.1'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '2.0.1'

[dependencies.df-traits]
default-features = false
path = '../traits'

[dependencies.pallet-permissions]
default-features = false
path = '../permissions'

[dependencies.pallet-posts]
default-features = false
path = '../posts'

[dependencies.pallet-spaces]
default-features = false
path = '../spaces'

[dependencies.pallet-space-follows]
default-features = false
path = '../space-follows'

[dependencies.pallet-utils]
default-features = false
path = '../utils'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '2.0.1'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '2.0.1'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '2.0.1'

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '2.0.1'

[dev-dependencies.pallet-profiles]
default-features = false
path = "../profiles"

[dev-dependencies.pallet-roles]
default-features = false
path = "../roles"
