[package]
name = "pallet-scores"
version = "2.0.0"
authors = ["DappForce <dappforce@pm.me>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://subsocial.network"
repository = "https://github.com/dappforce/dappforce-subsocial-node"
description = "Pallet to update scores of spaces, posts, comments and accounts (profiles)"
keywords = ["blockchain", "cryptocurrency", "social-network", "news-feed", "marketplace"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'system/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-timestamp/std',
    'pallet-utils/std',
    'df-traits/std',
    'pallet-permissions/std',
    'pallet-profiles/std',
    'pallet-posts/std',
    'pallet-spaces/std',
    'pallet-reactions/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.pallet-utils]
default-features = false
path = '../utils'
version = '2.0.0'

[dependencies.df-traits]
default-features = false
path = '../traits'
version = '2.0.0'

[dependencies.pallet-permissions]
default-features = false
path = '../permissions'
version = '2.0.0'

[dependencies.pallet-profiles]
default-features = false
path = '../profiles'
version = '2.0.0'

[dependencies.pallet-posts]
default-features = false
path = '../posts'
version = '2.0.0'

[dependencies.pallet-spaces]
default-features = false
path = '../spaces'
version = '2.0.0'

[dependencies.pallet-reactions]
default-features = false
path = '../reactions'
version = '2.0.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'
