[package]
name = 'pallet-session-keys'
version = '0.6.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Subsocial session keys pallet'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'transaction-payment/std',
    'pallet-utils/std',
    'pallet-spaces/std',
    'pallet-space-follows/std',
    'pallet-permissions/std',
]

[dependencies.serde]
optional = true
features = ["derive"]
version = "1.0.119"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.transaction-payment]
default-features = false
package = 'pallet-transaction-payment'
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.pallet-utils]
default-features = false
path = '../utils'

[dependencies.pallet-spaces]
default-features = false
path = '../spaces'

[dependencies.pallet-space-follows]
default-features = false
path = '../space-follows'

[dependencies.pallet-permissions]
default-features = false
path = '../permissions'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dev-dependencies.pallet-roles]
default-features = false
path = "../roles"

[dev-dependencies.df-traits]
default-features = false
path = '../traits'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dev-dependencies.pallet-profiles]
default-features = false
path = "../profiles"
